################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( Ejemplos de Clases )

add_executable(main main.cpp)
